...
                            .edgesIgnoringSafeArea(.all)
                        Button(action: {
                            // Back to the home main screen
                            viewModel.popBackToHomeScreen(presentationMode: presentationMode)
                        }) {
                            HStack {
                                Image(systemName: "arrow.backward")
                                    .aspectRatio(contentMode: .fit)
                                    .foregroundColor(.black)
                                    .padding(10)
                                    .background(Color.white)
                                    .clipShape(Circle())
                                    .padding(.leading, 5)
...
