...
                            <constraint firstItem="RZs-pb-GL1" firstAttribute="leading" secondItem="Gg6-a2-WOK" secondAttribute="leading" id="KEs-be-a3U"/>
                            <constraint firstItem="RZs-pb-GL1" firstAttribute="trailing" secondItem="Gg6-a2-WOK" secondAttribute="trailing" id="NZz-YY-pO5"/>
                            <constraint firstItem="RZs-pb-GL1" firstAttribute="bottom" secondItem="Gg6-a2-WOK" secondAttribute="bottom" id="YJp-TF-Yuv"/>
                            <constraint firstItem="RZs-pb-GL1" firstAttribute="top" secondItem="Gg6-a2-WOK" secondAttribute="top" id="eAe-Th-AgO"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Characters" largeTitleDisplayMode="always" id="q0L-VU-moH"/>
                    <connections>
                        <outlet property="charactersTableView" destination="OL1-5k-rGV" id="FEu-HC-rcn"/>
                        <outlet property="filtersCollectionView" destination="KAs-lV-eoQ" id="SP6-Gi-Bo6"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="qdb-uF-Ij0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
